force-app/main/default/objects/acheck__Checklist_Settings__mdt/acheck__Checklist_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Checklist4Sf Settings</description>
    <label>Checklist Settings</label>
    <pluralLabel>Checklist Settings</pluralLabel>
</CustomObject>