force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Canceled_Status__c.field-meta.xml
<CustomField>
    <fullName>acheck__Canceled_Status__c</fullName>
    <description>Discontinued</description>
    <inlineHelpText>Discontinued</inlineHelpText>
    <label>Discontinued</label>
    <length>40</length>
    <type>Text</type>
</CustomField>