force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__CanceledStatus_List__c.field-meta.xml
<CustomField>
    <fullName>acheck__CanceledStatus_List__c</fullName>
    <description>Task Closed - Cancel Status Names separated by ;
(first one is used by Instance cancel)</description>
    <inlineHelpText>Task Closed - Cancel Status Names separated by ;
(first one is used by Instance cancel)</inlineHelpText>
    <label>Canceled Status List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>