force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__High_Volume__c.field-meta.xml
<CustomField>
    <fullName>acheck__High_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>High Volume Environment</description>
    <inlineHelpText>High Volume Environment</inlineHelpText>
    <label>High Volume</label>
    <type>Checkbox</type>
</CustomField>