force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>acheck__Initial_Status__c</fullName>
    <defaultValue>&apos;Not Started&apos;</defaultValue>
    <description>Initial Task Status Overwrite - default: Not Stated</description>
    <inlineHelpText>Initial Task Status Overwrite - default: Not Stated</inlineHelpText>
    <label>Initial Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>