force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__InProgress_Status__c.field-meta.xml
<CustomField>
    <fullName>acheck__InProgress_Status__c</fullName>
    <defaultValue>&apos;In Progress&apos;</defaultValue>
    <description>In Progress Task Status Overwrite - default: In Progress</description>
    <inlineHelpText>In Progress Task Status Overwrite - default: In Progress</inlineHelpText>
    <label>In Progress Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>