force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__IsDebug__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Debug mode with more details in logfiles</description>
    <inlineHelpText>Debug mode with more details in logfiles</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>