force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__IsMicroTasks_All__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsMicroTasks_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluate Microtasks for all Tasks (not just Checklist tasks)</description>
    <inlineHelpText>Evaluate Microtasks for all Tasks (not just Checklist tasks)</inlineHelpText>
    <label>MicroTasks for All Tasks</label>
    <type>Checkbox</type>
</CustomField>