force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__OpenTasks_DisplayRelatedMax__c.field-meta.xml
<CustomField>
    <fullName>acheck__OpenTasks_DisplayRelatedMax__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Max related records to show (limits View Size)</description>
    <inlineHelpText>Max related records to show (limits View Size)</inlineHelpText>
    <label>Open Tasks Display Related Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>