force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__OpenTasks_QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>acheck__OpenTasks_QueryLimit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Maximum number of records to query in Open Tasks</description>
    <inlineHelpText>Maximum number of records to query in Open Tasks</inlineHelpText>
    <label>Open Tasks Query Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>