force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__PrerequisiteStatus_Start__c.field-meta.xml
<CustomField>
    <fullName>acheck__PrerequisiteStatus_Start__c</fullName>
    <defaultValue>&apos;Not Started&apos;</defaultValue>
    <description>Task Status for done Waiting for the Prerequisite - default: Not Started</description>
    <inlineHelpText>Task Status for done Waiting for the Prerequisite - default: Not Started</inlineHelpText>
    <label>Prerequisite Status Start</label>
    <length>40</length>
    <type>Text</type>
</CustomField>