force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__PrerequisiteStatus_Waiting__c.field-meta.xml
<CustomField>
    <fullName>acheck__PrerequisiteStatus_Waiting__c</fullName>
    <defaultValue>&apos;Waiting on someone else&apos;</defaultValue>
    <description>Task Status for Waiting for the Prerequisite to be completed - default: Waiting on someone else</description>
    <inlineHelpText>Task Status for Waiting for the Prerequisite to be completed - default: Waiting on someone else</inlineHelpText>
    <label>Prerequisite Status Waiting</label>
    <length>40</length>
    <type>Text</type>
</CustomField>