force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__QueueNames__c.field-meta.xml
<CustomField>
    <fullName>acheck__QueueNames__c</fullName>
    <description>Comma separated names of Queues</description>
    <inlineHelpText>Comma separated names of Queues</inlineHelpText>
    <label>Queue Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>