force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Recurring_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_Batch_Size__c</fullName>
    <description>Discontinued</description>
    <inlineHelpText>Discontinued</inlineHelpText>
    <label>Discontinued</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>