force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Recurring_BatchCC__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_BatchCC__c</fullName>
    <description>Recurring Batch result CC email address</description>
    <inlineHelpText>Recurring Batch result CC email address</inlineHelpText>
    <label>Recurring Batch CC</label>
    <type>Email</type>
</CustomField>