force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Recurring_BatchSize__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_BatchSize__c</fullName>
    <description>Recurring Batch (ChecklistRecurring) Size - default 10</description>
    <inlineHelpText>Recurring Batch (ChecklistRecurring) Size - default 10</inlineHelpText>
    <label>Recurring Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>