force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__Tasks_QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>acheck__Tasks_QueryLimit__c</fullName>
    <description>Maximum number of tasks to be queried for Task Management (Task Table) or Timeline - default: 500 (min: 10)</description>
    <inlineHelpText>Maximum number of tasks to be queried for Task Management (Task Table) or Timeline - default: 500 (min: 10)</inlineHelpText>
    <label>Tasks Query Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>