force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__User_IsReferences__c.field-meta.xml
<CustomField>
    <fullName>acheck__User_IsReferences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use user references on the target object (untypical!) - e.g., OwnerId, UpdatedById, etc. of Account</description>
    <inlineHelpText>Use user references on the target object (untypical!)  - e.g., OwnerId, UpdatedById, etc. of Account</inlineHelpText>
    <label>User References</label>
    <type>Checkbox</type>
</CustomField>