force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__User_Limit__c.field-meta.xml
<CustomField>
    <fullName>acheck__User_Limit__c</fullName>
    <description>Max number of users to query to be assigned to Tasks (default 200); if there are more users, a user lookup is used</description>
    <inlineHelpText>Max number of users to query to be assigned to Tasks (default 200); if there are more users, a user lookup is used</inlineHelpText>
    <label>User Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>