force-app/main/default/objects/acheck__Checklist_Settings__mdt/fields/acheck__User_WhereClause__c.field-meta.xml
<CustomField>
    <fullName>acheck__User_WhereClause__c</fullName>
    <description>additional where clause to query users to assign to checklist tasks (in addition to IsActive=true AND Profile.Name!=NULL)</description>
    <inlineHelpText>additional where clause to query users to assign to checklist tasks (in addition to IsActive=true AND Profile.Name!=NULL)</inlineHelpText>
    <label>User Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>